<resources>
    <string name="app_name" translatable="false">App Locker</string>
    <string name="app_lock_app_name">App Locker</string>

    <string name="action_password">Password Change</string>
    <string name="draw_pattern">Draw pattern</string>
    <string name="enter_password">Enter Password</string>
    <string name="rate_us">Rate us</string>

    <string name="locker_invalid_password">Wrong password</string>
    <string name="click_to_show">Click to show BlurLockView</string>
    <string name="answer">Enter your answer here</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="perm_overlay_text">permit drawing other apps</string>
    <string name="perm_usage_access_text">You must permit Usage Access for AppLock feature.</string>
    <string name="perm_text">Lock your apps, no one can use without your password! \nYou need to give some permissions for security policies.</string>
    <string name="perm_title">Permissions</string>
    <string name="password_text">Set Password for Security</string>

    <string name="recovery_text_init">This will be required to recover password, if in case you forget password</string>
    <string name="recovery_button_init">Confirm</string>

    <string name="recovery_text_recover">Select your security question and give the correct answer to recover</string>
    <string name="recovery_button_recover">Recover</string>
    <string name="recovery_title">Secret Question</string>
    <string name="forget_password">Forget Password</string>
    <string name="password_retry">Retry</string>
    <string name="nav_home">Home</string>
    <string name="nav_password">Password</string>
    <string name="password_pattern_draw">Draw Pattern</string>
    <string name="password_pattern_redraw">Re-Draw Pattern</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="enter_pin_re">Enter PIN again</string>
    <string name="pass_type_title">Select Lock Model</string>
    <string name="pass_type_text">You need to select how to lock apps</string>
    <string name="pass_type_pattern">Pattern Lock</string>
    <string name="pass_type_pin">PIN Lock</string>
    <string name="app_list_is_loading">App list is loading</string>

    <string name="enable_accessibility_service_guide">Find %1$s in Services\nClick switch to enable %2$s</string>
    <string name="off">Off</string>

    <string name="applock_title">Secured</string>
    <string name="applock_content">No one can use without your password</string>
    <string name="applock_ticker">No one can use without your password</string>

</resources>
