<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/top_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="24dp"
                android:text="@string/recovery_title"
                android:textColor="@color/appLockColorText"
                android:textSize="32sp" />


            <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="18dp"
                android:src="@drawable/question_icon" />

            <TextView
                android:id="@+id/content_recovery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/recovery_text_init"
                android:textColor="@color/appLockColorText" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/rounded_white_bg"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">

                <Spinner
                    android:id="@+id/questionsSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp"
                    android:background="@null"
                    android:gravity="center"
                    android:textAlignment="center" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/arrow_down_icon" />
            </RelativeLayout>


            <EditText
                android:id="@+id/answer"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/rounded_white_bg"
                android:gravity="center"
                android:hint="@string/answer"
                android:lines="1"
                android:maxLines="1"
                android:minLines="1"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textAlignment="center"
                android:textColor="@color/appLockColorTextForWhiteBg"
                android:textSize="18sp" />


            <Button
                android:id="@+id/confirmButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/recovery_button_init"
                android:textColor="#fff"
                android:textSize="16sp" />


        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:id="@+id/bottom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

</LinearLayout>
